--- a/404.html
+++ b/404.html
@@ -1,12 +1,15 @@
-<!-- Redirect 404s to index.html for client-side routing on GitHub Pages -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=%PUBLIC_URL%/index.html" />
+    <script type="text/javascript">
+      // Redirect all 404s to /landing
+      var redirectTo = "/landing"; 
+      var l = window.location;
+      l.replace(l.protocol + "//" + l.host + l.pathname.split("/")[1] + redirectTo);
+    </script>
   </head>
   <body>
-    <p>Redirecting to app… <a href="%PUBLIC_URL%/index.html">Click here</a>.</p>
   </body>
 </html>
